Add line example ability

--- a/website/src/pages/de-taal.mdx
+++ b/website/src/pages/de-taal.mdx
@@ -1,4 +1,4 @@
-import { Example } from "../components/Example";
+import { Example, LineExample } from "../components/Example";
 
 # De taal
 
@@ -92,18 +92,27 @@ Numerieke letterlijke getallen in Levenslied worden geschreven als decimale geta
 
 Toewijzing wordt gedaan door `stop <expressie> in <variabele>` of `laat <variabele> <expressie> wezen`:
 
-- `stop 123 in X`, wordt de waarde 123 aan de variabele X toegewezen
-- `stop "Hallo Weert" in de boodschap`, wordt de waarde `'Hallo Weert'` aan de variabele `de boodschap` toegewezen
-- `Laat mijn saldo 1000000 wezen`, dan wordt de waarde 1000000 opgeslagen in de variabele `mijn saldo`
-- `Laat de overlevenden de dapperen zonder de gevallenen wezen` de gevallenen van de dapperen aftrekken en het resultaat opslaan in de overlevenden
+- <LineExample>stop 123 in X</LineExample>, wordt de waarde 123 aan de variabele
+  X toegewezen
+- <LineExample>stop "Hallo Weert" in de boodschap</LineExample>, wordt de waarde
+  `'Hallo Weert'` aan de variabele `de boodschap` toegewezen
+- <LineExample>Laat mijn saldo 1000000 wezen</LineExample>, dan wordt de waarde
+  1000000 opgeslagen in de variabele `mijn saldo`
+- <LineExample>
+    Laat de overlevenden de dapperen zonder de gevallenen wezen
+  </LineExample> de gevallenen van de dapperen aftrekken en het resultaat opslaan
+  in de overlevenden
 
 ## Verhogen en verlagen
 
 Verhogen en verlagen worden ondersteund door de instructies `Bouw {variable} op` en `Haal {variable} neer`. Als u meer dan één op- of neerwaartse factor in de verklaring optelt, wordt het aantal keren verhoogd of verlaagd als er `op` of `neer` in de verklaring voorkomen. Er kan een komma tussen elke `op` en `neer` staan.
 
-- `Bouw mijn wereld op` verhoogt de waarde die in `mijn wereld` is opgeslagen met 1.
-- `Haal de muren neer`, wordt de waarde die in `de muren` is opgeslagen met 1 verlaagd
-- `Haal de muren neer, neer` Omlaag verlaagt de waarde die in `de muren` is opgeslagen met 2
+- <LineExample>Bouw mijn wereld op</LineExample> verhoogt de waarde die in `mijn
+  wereld` is opgeslagen met 1.
+- <LineExample>Haal de muren neer</LineExample>, wordt de waarde die in `de
+  muren` is opgeslagen met 1 verlaagd
+- <LineExample>Haal de muren neer, neer</LineExample> Omlaag verlaagt de waarde die
+  in `de muren` is opgeslagen met 2
 
 ## Exploitanten
 
@@ -118,13 +127,16 @@ Levenslied ondersteunt de rekenkundige operatoren `+`, `-`, `*` en `/`. De taal 
 
 Voorbeelden:
 
-`Stop de passie van jouw hart in mijn handen` - vermenigvuldig `jouw hart` met `de passie` en zet het resultaat in `mijn handen`
-
-`Laat mijn wereld niets zonder jouw liefde wezen` - Initialiseer `mijn wereld` met het resultaat van 0 - `jouw liefde`
-
-`Als de tranen van een kind bestaat uit niets` - controleer of `de tranen` \* `een kind` = 0
-
-`laat mijn gevoelens mijn hoofd boven de wolken wezen` - Deel `mijn hoofd` door `de wolken` en zet het resultaat in `mijn gevoelens`
+- <LineExample>Stop de passie van jouw hart in mijn handen</LineExample> - vermenigvuldig
+  `jouw hart` met `de passie` en zet het resultaat in `mijn handen`
+- <LineExample>Laat mijn wereld niets zonder jouw liefde wezen</LineExample> - Initialiseer
+  `mijn wereld` met het resultaat van 0 - `jouw liefde`
+- <LineExample>Als de tranen van een kind bestaat uit niets</LineExample> - controleer
+  of `de tranen` \* `een kind` = 0
+- <LineExample>
+    laat mijn gevoelens mijn hoofd boven de wolken wezen
+  </LineExample> - Deel `mijn hoofd` door `de wolken` en zet het resultaat in `mijn
+  gevoelens`
 
 ## Afronden
 
@@ -156,26 +168,38 @@ Zeg de radio
 
 Een poëtische constante is een enkele regel die bestaat uit de naam van een variabele, het sleutelwoord `is`, of de aliassen `bestaat uit`, `zijn`, `was` of `waren`, en een constante die de waarde aangeeft waarop de variabele zal worden ingesteld.
 
-- `Mijn hart is juist` - initialiseert de variabele mijn hart met de Booleaanse waarde waar
-- `Tommy is niemand` - initialiseert de variabele Tommy met de waarde nul met behulp van de alias niemand
-- `Tommy is mysterieus` - initialiseert de variabele Tommy met de waarde mysterieus.
+- <LineExample>Mijn hart is juist</LineExample> - initialiseert de variabele mijn
+  hart met de Booleaanse waarde waar
+- <LineExample>Tommy is niemand</LineExample> - initialiseert de variabele Tommy
+  met de waarde nul met behulp van de alias niemand
+- <LineExample>Tommy is mysterieus</LineExample> - initialiseert de variabele Tommy
+  met de waarde mysterieus.
 
 ### Poëtische Tekst Constantes
 
 Een poëtische tekst toewijzing van een tekenreeks begint met een variabelenaam, gevolgd door een van de trefwoorden `zeggen`, `zegt` of `zeiden`, gevolgd door een enkele spatie. De rest van de regel tot aan de \n-terminator wordt behandeld als een letterlijke tekenreeks zonder aanhalingstekens.
 
-- `Andre zegt Hallo Den Haag!` initialiseerd de variabele `Andre` met de tekst `"Hallo Amsterdam!"`.
-- `Den Haag zegt Hallo terug` initialiseerd de variabele `Den Haag` met de tekst `"Hallo terug"`.
-- `Jij zegt dat ik te min ben` initialiseerd de variabele `jij` met de tekst `"dat ik te min ben"`
+- <LineExample>Andre zegt Hallo Den Haag!</LineExample> initialiseerd de variabele
+  `Andre` met de tekst `"Hallo Amsterdam!"`.
+- <LineExample>Den Haag zegt Hallo terug</LineExample> initialiseerd de variabele
+  `Den Haag` met de tekst `"Hallo terug"`.
+- <LineExample>Jij zegt dat ik te min ben</LineExample> initialiseerd de variabele
+  `jij` met de tekst `"dat ik te min ben"`
 
 ### Poëtische Getal constantes
 
 Een poëtisch getal begint met de naam van een variabele, gevolgd door het trefwoord `is`, of de aliassen `bestaat uit`, `zijn`, `was` of `waren`. Zolang het volgende symbool geen letterlijk woord is, wordt de rest van de regel behandeld als een decimaal getal waarin de waarden van opeenvolgende cijfers worden gegeven door de lengte van de daaropvolgende kale woorden, tot aan het einde van de regel. Om het cijfer nul mogelijk te maken en om het gebrek aan geschikte smartlap-woorden van één en twee letters te compenseren, worden de woordlengtes modulo 10 geparseerd. Een punt (.) geeft een decimaal aan. Met uitzondering van de eerste punt worden alle niet-alfabetische tekens genegeerd.
 
-- `Henk is fantastisch emotionele kunstenaar` initialiseerd `Henk` met de waarde `100`
-- `Andre was een man van het volk` initialiseerd `Andre` met de waarde `33334`
-- `Mijn dromen waren kil. Achterdocht deed huiveringen tonen` initialiseerd `Mijn dromen` met de waarde `3.1415`
-- `Sjaak was zonder` initialiseerd `Sjaak` met de waarde `6`. Hoewel `zonder` een gereserveerd woord is wordt het hier gezien als een letterlijk woord.
+- <LineExample>Henk is fantastisch emotionele kunstenaar</LineExample> initialiseerd
+  `Henk` met de waarde `100`
+- <LineExample>Andre was een man van het volk</LineExample> initialiseerd `Andre`
+  met de waarde `33334`
+- <LineExample>
+    Mijn dromen waren kil. Achterdocht deed huiveringen tonen
+  </LineExample> initialiseerd `Mijn dromen` met de waarde `3.1415`
+- <LineExample>Sjaak was zonder</LineExample> initialiseerd `Sjaak` met de waarde
+  `6`. Hoewel `zonder` een gereserveerd woord is wordt het hier gezien als een letterlijk
+  woord.
 
 Houd er rekening mee dat poëtische letterlijke woorden gereserveerde trefwoorden kunnen bevatten, zoals in dit voorbeeld.
 Het koppelteken (-) wordt als een letter geteld – je kunt dus termen gebruiken als ‘alles-omvattend’ (15 letters > 5) en ‘niet-geliefd’ (12 letters > 2) in plaats van dat je aan 12- en 13 moet denken -letterwoorden.
