Add infinite loop FAQ item

--- a/website/src/pages/veel-gestelde-vragen.mdx
+++ b/website/src/pages/veel-gestelde-vragen.mdx
@@ -1,3 +1,5 @@
+import { Example } from "../components/Example";
+
 # Veel gestelde vragen
 
 <details>
@@ -17,5 +19,18 @@ waarin Joost Klein natuurlijk flinke bekendheid creert met zijn "Europa-pa". Dit
 
 **Zeer binnenkort™!** Ons uitgebreide team van testers werkt nu al dagelijks met deze taal.
 Op de wandelgangen van Kabisa wordt ook flink veel Nederlands gepraat. Al deze interacties zorgen er voor dat u straks een super robuuste programmeertaal in handen gaat krijgen!
+
+</details>
+
+<details>
+
+<summary>Kan ik ook eindeloze loops programmeren?</summary>
+
+**Zeker!** Ons toegewijde ontwikkelteam heeft koste noch moeite gespaard tijdens de ontwikkeling van deze nieuwe revolutionaire taal.
+Sterker nog, het hebben van eindeloze loops stond hoog op de lijst van zaken die we wilden ondersteunen!
+
+<Example>{`Mijn lus is ontzettend lang
+Zolang mijn lus niet niets is
+Zing "een potje met vet"`}</Example>
 
 </details>
