--- a/website/src/pages/de-taal.mdx
+++ b/website/src/pages/de-taal.mdx
@@ -177,7 +177,7 @@ Een poëtische constante is een enkele regel die bestaat uit de naam van een var
 Een poëtische tekst toewijzing van een tekenreeks begint met een variabelenaam, gevolgd door een van de trefwoorden `zeggen`, `zegt` of `zeiden`, gevolgd door een enkele spatie. De rest van de regel tot aan de \n-terminator wordt behandeld als een letterlijke tekenreeks zonder aanhalingstekens.
 
 - <LineExample>Andre zegt Hallo Den Haag!</LineExample> initialiseerd de variabele
-  `Andre` met de tekst `"Hallo Amsterdam!"`.
+  `Andre` met de tekst `"Hallo Den Haag!"`.
 - <LineExample>Den Haag zegt Hallo terug</LineExample> initialiseerd de variabele
   `Den Haag` met de tekst `"Hallo terug"`.
 - <LineExample>Jij zegt dat ik te min ben</LineExample> initialiseerd de variabele
@@ -224,7 +224,7 @@ ontkenningen kunnen hier ook mee worden gedaan
 Levenslied ondersteunt ook de volgende vergelijkingssyntaxis:
 
 - `hoger/groter/sterker/beter is dan` om ‘groter dan’ aan te duiden
-- `lager/minder/kleiner/zwakker/slechter dan` om ‘minder dan’ aan te duiden
+- `lager/minder/kleiner/zwakker/slechter is dan` om ‘minder dan’ aan te duiden
 - `zo hoog/groot/sterk/goed is als` om ‘groter dan of gelijk aan’ aan te duiden
 - `zo laag/slecht/klein/zwak als` om ‘kleiner dan of gelijk aan’ aan te duiden
 
