--- a/website/src/pages/veel-gestelde-vragen.mdx
+++ b/website/src/pages/veel-gestelde-vragen.mdx
@@ -4,6 +4,32 @@ import { Example } from "../components/Example";
 
 <details>
 
+<summary>Waarom Levenslied?</summary>
+
+**Kabisa** heeft altijd al als missie gehad om **Software bouwend Nederland** beter te maken. Met het uitvoeren van **vakmanschap**, **agile practices**, en **kennisdeling**. Toch vonden we dat we een stapje extra moesten zetten. In plaats van een stapje, kozen we echter voor een gigantische sprong voorwaarts.
+
+Hierbij dan ook ons nieuwe **Mission statement**:
+
+<Example>{`Vakmanschap wil ambitie, creativiteit en ruimte
+Schreeuw ambitie
+'
+Een gedrevenheid, zegt onze passie
+Onze passie is groot. Onbeschrijvelijk krachtig en mooi.
+Bouw het op!
+Versterk het!
+Onze code bestaat uit logica
+Onze klanten zeggen: Software bouwen is echt
+Zolang onze code zwakker is dan onze passie
+Vakmanschap ontvangt onze klanten met een gedrevenheid
+Bouw onze code op!
+`}</Example>
+
+En welke bedrijf kan nu zeggen dat werkende code daadwerkelijk in zijn mission statement zit! ❤️
+
+</details>
+
+<details>
+
 <summary>Waarom is de programmeertaal in het Nederlands?</summary>
 
 Nu lijkt het nog raar. Een programmeertaal in heel duidelijk begrijpelijk en leesbaar Nederlands. Het lees lekker, je kan het zingen, maar toch voelt het internationaal beperkend.
