--- a/website/src/pages/de-taal.mdx
+++ b/website/src/pages/de-taal.mdx
@@ -226,7 +226,7 @@ Levenslied ondersteunt ook de volgende vergelijkingssyntaxis:
 - `hoger/groter/sterker/beter is dan` om ‘groter dan’ aan te duiden
 - `lager/minder/kleiner/zwakker/slechter is dan` om ‘minder dan’ aan te duiden
 - `zo hoog/groot/sterk/goed is als` om ‘groter dan of gelijk aan’ aan te duiden
-- `zo laag/slecht/klein/zwak als` om ‘kleiner dan of gelijk aan’ aan te duiden
+- `zo laag/slecht/klein/zwak is als` om ‘kleiner dan of gelijk aan’ aan te duiden
 
 ## Logische operaties
 
