--- a/website/src/pages/veel-gestelde-vragen.mdx
+++ b/website/src/pages/veel-gestelde-vragen.mdx
@@ -10,18 +10,21 @@ import { Example } from "../components/Example";
 
 Hierbij dan ook ons nieuwe **Mission statement**:
 
-<Example>{`Vakmanschap wil ambitie, creativiteit en ruimte
+<Example>{`Onze ontwikkelaars zeggen Kabisa!
+Vakmanschap wil ambitie, creativiteit en ruimte
 Schreeuw ambitie
 '
 Een gedrevenheid, zegt onze passie
-Onze passie is groot. Onbeschrijvelijk krachtig en mooi.
-Bouw het op!
+Onze passie is groots. Onbeschrijvelijk krachtig en mooi.
+Bouw het op, op!
 Versterk het!
 Onze code bestaat uit logica
 Onze klanten zeggen: Software bouwen is echt
 Zolang onze code zwakker is dan onze passie
-Vakmanschap ontvangt onze klanten met een gedrevenheid
 Bouw onze code op!
+Vakmanschap ontvangt onze klanten met een gedrevenheid
+'
+Zing, onze ontwikkelaars
 `}</Example>
 
 En welke bedrijf kan nu zeggen dat werkende code daadwerkelijk in zijn mission statement zit! ❤️
