--- a/website/src/pages/de-taal.mdx
+++ b/website/src/pages/de-taal.mdx
@@ -2,6 +2,12 @@ import { Example, LineExample } from "../components/Example";
 
 # De taal
 
+:::tip
+
+Voor vragen over het waarom, bekijk onze [Vragen](./veel-gestelde-vragen) pagina.
+
+:::
+
 ## Documentatie
 
 Het gebruik van documentatie in levenslied programmas wordt sterk afgeraden. Het is een lied. Het is aan het publiek om hier zelf een betekenis aan te koppelen. Als je er echt op staat om documentatie toe te voegen aan je programma, dan moet het tussen haakjes `()` staan.
