--- a/website/docs/index.mdx
+++ b/website/docs/index.mdx
@@ -1,10 +1,8 @@
-import { Example, LineExample } from "../components/Example";
-
 # De taal
 
 :::tip
 
-Voor vragen over het waarom, bekijk onze [Vragen](./veel-gestelde-vragen) pagina.
+Voor vragen over het waarom, bekijk onze [Vragen](/veel-gestelde-vragen) pagina.
 
 :::
 
