--- a/website/docs/index.mdx
+++ b/website/docs/index.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 ---
 
-# De taal
+# Welkom!
 
 :::tip
 
@@ -10,23 +10,6 @@ Voor vragen over het waarom, bekijk onze [Vragen](/veel-gestelde-vragen) pagina.
 
 :::
 
-## Documentatie
+Kabisa Levenslied is een zeer geavanceerde en gevoelige programmeertaal. Je laat de computer werken door hem contact te laten maken met je ware emoties en gevoelens.
 
-Het gebruik van documentatie in levenslied programmas wordt sterk afgeraden. Het is een lied. Het is aan het publiek om hier zelf een betekenis aan te koppelen. Als je er echt op staat om documentatie toe te voegen aan je programma, dan moet het tussen haakjes `()` staan.
-
-<Example>{`
-(zet Harm = 296)
-Harm is de drijvende kracht.
-`}</Example>
-
-Pagina volgorde:
-
-- Variabelen
-- Types
-- Waardes toewijzen
-- Rekenen
-- Poëtische Constantes
-- Vergelijkingen
-- Uitvoer
-- Condities en lussen
-- Functies
+Leer hier alles over hoe de taal werkt, experimenteer er mee via onze preview ["Probeer het zelf"](/probeer-het), en bekijk alles over onze succesvolle use-cases.
