Add release date question

--- a/website/src/pages/veel-gestelde-vragen.mdx
+++ b/website/src/pages/veel-gestelde-vragen.mdx
@@ -63,3 +63,11 @@ Zolang mijn lus niet niets is
 Zing "een potje met vet"`}</Example>
 
 </details>
+
+<details>
+
+<summary>Waarom livegang op 1 april 2024?</summary>
+
+Zoals met veel IT projecten schuiven release data nog wel eens. Dat was bij dit project niet anders. We wilden aanvankelijk livegaan in augustus 2024. Maar door alle ontwikkelingen op AI gebied kwamen we erachter dat het publiek voor Levenslied hier nu al veel eerder klaar voor is. Daarom hebben we de releasedatum naar voren geschoven.
+
+</details>
