Add use-cases, recursion and 2 testimonials

--- a/website/docs/index.mdx
+++ b/website/docs/index.mdx
@@ -12,4 +12,6 @@ Voor vragen over het waarom, bekijk onze [Vragen](/veel-gestelde-vragen) pagina.
 
 Kabisa Levenslied is een zeer geavanceerde en gevoelige programmeertaal. Je laat de computer werken door hem contact te laten maken met je ware emoties en gevoelens.
 
+Na vele succesvolle projecten die we intern en voor onze klanten hebben gedaan zijn we eindelijk op het punt om de technologie die we inzetten te kunnen delen met de buitenwereld. Niets is mooier dan iedereen te laten profiteren van de kracht van Levenslied aan je vingertoppen.
+
 Leer hier alles over hoe de taal werkt, experimenteer er mee via onze preview ["Probeer het zelf"](/probeer-het), en bekijk alles over onze succesvolle use-cases.
