--- a/website/src/pages/veel-gestelde-vragen.mdx
+++ b/website/src/pages/veel-gestelde-vragen.mdx
@@ -66,8 +66,42 @@ Zing "een potje met vet"`}</Example>
 
 <details>
 
+<summary>
+  Kun je een voorbeeld geven hoe ik gebruik kan maken van recursie?
+</summary>
+
+Uiteraard. Maar om recursie te snappen, dien je wel eerst recursie te snappen.
+
+<Example>{`Vuur is overal
+Mijn couplet neemt jouw songtekst en mijn barriere
+Mijn gevoelens zeggen potje met vet,
+Haal mijn barriere neer
+Stop jouw songtekst met mijn gevoelens in mijn hart
+Als mijn barriere niet niets is
+Mijn couplet ontvangt mijn hart en mijn barriere
+'
+Zing jouw songtekst
+'
+Liefde is sterk
+Ongrijpbare Liefde zegt: Ik heb
+Mijn teller is "een"
+Stop Ongrijpbare Liefde met mijn teller in de songtekst
+Mijn couplet ontvangt de songtekst en vuur`}</Example>
+
+</details>
+
+<details>
+
 <summary>Waarom livegang op 1 april 2024?</summary>
 
 Zoals met veel IT projecten schuiven release data nog wel eens. Dat was bij dit project niet anders. We wilden aanvankelijk livegaan in augustus 2024. Maar door alle ontwikkelingen op AI gebied kwamen we erachter dat het publiek voor Levenslied hier nu al veel eerder klaar voor is. Daarom hebben we de releasedatum naar voren geschoven.
+
+</details>
+
+<details>
+
+<summary>Is er een community van Levenslied developers?</summary>
+
+Ja, er worden regelmatig code challenges gezongen in karaoke bars.
 
 </details>
