More content updates

--- a/website/docs/de-taal/uitvoer.mdx
+++ b/website/docs/de-taal/uitvoer.mdx
@@ -8,3 +8,11 @@ Gebruik het trefwoord `zeg` om de waarde van een variabele naar STDOUT te schrij
 
 `Zeg Tommy` - voert de in Tommy opgeslagen waarde uit naar STDOUT
 Levenslied definieert `schreeuw`, `fluister` en `zing` als aliassen voor `zeg`.
+
+<Example>{`
+de gedichten zeggen Liefde, Passie en Vakmanschap
+Zeg de gedichten
+Fluister het
+Zing het
+Schreeuw het
+`}</Example>
