--- a/website/docs/de-taal/variabelen.mdx
+++ b/website/docs/de-taal/variabelen.mdx
@@ -43,7 +43,7 @@ Als een variabele buiten een functie wordt gedefinieerd, bevindt deze zich in ee
 
 Als u binnen een functie naar een variabele schrijft die binnen het globale bereik is gedefinieerd, schrijft u naar die variabele; u definieert geen nieuwe lokale variabele.
 
-**Een opmerking over hoofdlettergevoeligheid in Levenslied**
+:::note Een opmerking over hoofdlettergevoeligheid in Levenslied
 
 Levenslied-trefwoorden en namen van variabelen zijn allemaal _niet_ hoofdlettergevoelig, met uitzondering van werkelijke variabelen. Werkelijke variabelen zijn niet hoofdlettergevoelig, **afgezien van de eerste letter van elk woord, die een hoofdletter moet zijn**.
 
@@ -51,6 +51,8 @@ Levenslied-trefwoorden en namen van variabelen zijn allemaal _niet_ hoofdletterg
 - `MIJN HART`, `mijn hart`, `Mijn Hart` - zijn allemaal gelijkwaardig; het trefwoord `mijn` triggert algemeen variabel gedrag
 - `Tom Sawyer`, `TOM SAWYER`, `TOm SAWyer` - zijn allemaal gelijkwaardig; de hoofdletter `S` op `Sawyer` veroorzaakt het werkelijke variabele gedrag
 - `KOOS werkeloos` is geen geldige Levenslied-variabele; de kleine letter `w` op `werkeloos` komt niet overeen met een geldige naamgevingsstijl voor variabelen en dus is de naam van de variabele niet geldig.
+
+:::
 
 **Voornaamwoorden**
 De trefwoorden `het`, `hij`, `zij`, `hem`, `haar` en `hun` verwijzen naar de laatst genoemde variabele, bepaald door de parseervolgorde.
