--- a/website/docs/de-taal/types.mdx
+++ b/website/docs/de-taal/types.mdx
@@ -7,7 +7,7 @@ sidebar_position: 3
 Levenslied gebruikt een soortgelijk typesysteem als gedefinieerd door het ECMAScript-typesysteem, behalve dat `undefined` niet erg goed te zingen is, dus gebruiken we in plaats daarvan mysterieus.
 
 - `Mysterieus` - de waarde van elke variabele waaraan geen waarde is toegewezen, aangegeven met het trefwoord mysterieus
-- `Null` - het null-type. Evalueert als gelijk aan nul en gelijk aan false. De trefwoorden `niets`, `nergens`, `niemand` en `weg` worden gedefinieerd als aliassen voor `null`
+- `Null` - het null-type. Evalueert als gelijk aan nul en gelijk aan `false`. De trefwoorden `niets`, `nergens`, `niemand` en `weg` worden gedefinieerd als aliassen voor `null`
 - `Boolean` - een logische entiteit met twee waarden waar en onwaar.
   `juist`, `ja` en `oke` zijn geldige aliassen voor waar
   `fout`, `nee` en `leugens` zijn geldige aliassen voor onwaar
@@ -22,4 +22,4 @@ De resultaten van vergelijkingen zijn vaak gebaseerd op een concept dat ‘waarh
 - Null - Onwaar
 - Boolean - Waarheid als waar, onwaar als onwaar
 - Getal - Indien gelijk aan 0: onwaar. Anders waar.
-- String - Waarheid (null is het valse equivalent)
+- String - Waarheid (`null` is het valse equivalent)
