--- a/website/docs/de-taal/variabelen.mdx
+++ b/website/docs/de-taal/variabelen.mdx
@@ -35,7 +35,7 @@ Schreeuw totaal
 (Variabelen die uit één woord bestaan, zijn altijd eenvoudige variabelen.)
 Hoewel sommige ontwikkelaars deze functie kunnen gebruiken om variabelen te maken met namen als `Klant ID`, `Korting Belastingtarief` of `Afstand in KM`, raden we u aan idiomatische namen van variabelen te gebruiken, zoals `Sjaak Afhaak`, `Koos Werkeloos` en `Vergeetachtige Harry`.
 
-(Hoewel niet strikt idiomatisch, zouden `Jan Boezeroen`, `Ome Henk`, `Black Betty` en `Johnny B Goode` ook allemaal geldige variabelenamen zijn in Levenslied.)
+(Hoewel niet strikt idiomatisch, zouden `Jan Boezeroen`, `Ome Henk`, `Black Betty` en `Ma Flodder` ook allemaal geldige variabelenamen zijn in Levenslied.)
 
 Net als in Ruby, Python en VBScript worden variabelen dynamisch getypt en hoeft u variabelen niet vóór gebruik te declareren.
 
