--- a/website/src/pages/veel-gestelde-vragen.mdx
+++ b/website/src/pages/veel-gestelde-vragen.mdx
@@ -6,7 +6,7 @@ import { Example } from "../components/Example";
 
 <summary>Waarom Levenslied?</summary>
 
-**Kabisa** heeft altijd al als missie gehad om **Software bouwend Nederland** beter te maken. Met het uitvoeren van **vakmanschap**, **agile practices**, en **kennisdeling**. Toch vonden we dat we een stapje extra moesten zetten. In plaats van een stapje, kozen we echter voor een gigantische sprong voorwaarts.
+**Kabisa** heeft altijd al als missie gehad om **Software bouwend Nederland** beter te maken. Met het uitvoeren van **vakmanschap**, **agile practices**, en **kennisdeling**. Toch vinden we dat we een stapje extra moeten zetten. In plaats van een stapje, kozen we echter voor een gigantische sprong voorwaarts.
 
 Hierbij dan ook ons nieuwe **Mission statement**:
 
@@ -15,7 +15,7 @@ Vakmanschap wil ambitie, creativiteit en ruimte
 Schreeuw ambitie
 '
 Een gedrevenheid, zegt onze passie
-Onze passie is groots. Onbeschrijvelijk krachtig en mooi.
+Onze passie is groots. Onbeschrijfelijk krachtig en mooi.
 Bouw het op, op!
 Versterk het!
 Onze code bestaat uit logica
@@ -27,7 +27,7 @@ Vakmanschap ontvangt onze klanten met een gedrevenheid
 Zing, onze ontwikkelaars
 `}</Example>
 
-En welke bedrijf kan nu zeggen dat werkende code daadwerkelijk in zijn mission statement zit! ❤️
+En welk bedrijf kan nu zeggen dat werkende code daadwerkelijk in zijn mission statement zit! ❤️
 
 </details>
 
@@ -35,10 +35,10 @@ En welke bedrijf kan nu zeggen dat werkende code daadwerkelijk in zijn mission s
 
 <summary>Waarom is de programmeertaal in het Nederlands?</summary>
 
-Nu lijkt het nog raar. Een programmeertaal in heel duidelijk begrijpelijk en leesbaar Nederlands. Het lees lekker, je kan het zingen, maar toch voelt het internationaal beperkend.
+Nu lijkt het nog raar. Een programmeertaal in heel duidelijk begrijpelijk en leesbaar Nederlands. Het leest lekker, je kan het zingen, maar toch voelt het internationaal beperkend.
 
-**Denk aan de toekomst**. Binnenkort is het Eurovisie Song festival,
-waarin Joost Klein natuurlijk flinke bekendheid creert met zijn "Europa-pa". Dit zal de intresse in de Nederlandse taal zo doen toenemen, dat in een zeer korte tijd een veel groter deel van de wereldbevolking gewoon Nederlands kan lezen en schrijven.
+**Denk aan de toekomst**. Binnenkort is het Eurovisie Songfestival,
+waarin Joost Klein natuurlijk flinke bekendheid creëert met zijn "Europa-pa". Dit zal de interesse in de Nederlandse taal zo doen toenemen, dat in een zeer korte tijd een veel groter deel van de wereldbevolking gewoon Nederlands kan lezen en schrijven.
 
 </details>
 
@@ -47,7 +47,7 @@ waarin Joost Klein natuurlijk flinke bekendheid creert met zijn "Europa-pa". Dit
 <summary>Wanneer is de taal klaar voor Productie?</summary>
 
 **Zeer binnenkort™!** Ons uitgebreide team van testers werkt nu al dagelijks met deze taal.
-Op de wandelgangen van Kabisa wordt ook flink veel Nederlands gepraat. Al deze interacties zorgen er voor dat u straks een super robuuste programmeertaal in handen gaat krijgen!
+Op de wandelgangen van Kabisa wordt ook flink veel Nederlands gepraat. Al deze interacties zorgen ervoor dat u straks een super robuuste programmeertaal in handen gaat krijgen!
 
 </details>
 
@@ -55,7 +55,7 @@ Op de wandelgangen van Kabisa wordt ook flink veel Nederlands gepraat. Al deze i
 
 <summary>Kan ik ook eindeloze loops programmeren?</summary>
 
-**Zeker!** Ons toegewijde ontwikkelteam heeft koste noch moeite gespaard tijdens de ontwikkeling van deze nieuwe revolutionaire taal.
+**Zeker!** Ons toegewijde ontwikkelteam heeft kosten noch moeite gespaard tijdens de ontwikkeling van deze nieuwe revolutionaire taal.
 Sterker nog, het hebben van eindeloze loops stond hoog op de lijst van zaken die we wilden ondersteunen!
 
 <Example>{`Mijn lus is ontzettend lang
@@ -94,7 +94,7 @@ Mijn couplet ontvangt de songtekst en vuur`}</Example>
 
 <summary>Waarom livegang op 1 april 2024?</summary>
 
-Zoals met veel IT projecten schuiven release data nog wel eens. Dat was bij dit project niet anders. We wilden aanvankelijk livegaan in augustus 2024. Maar door alle ontwikkelingen op AI gebied kwamen we erachter dat het publiek voor Levenslied hier nu al veel eerder klaar voor is. Daarom hebben we de releasedatum naar voren geschoven.
+Zoals met veel IT projecten schuiven release data nog weleens. Dat was bij dit project niet anders. We wilden aanvankelijk livegaan in augustus 2024. Maar door alle ontwikkelingen op AI gebied kwamen we erachter dat het publiek voor Levenslied hier nu al veel eerder klaar voor is. Daarom hebben we de releasedatum naar voren geschoven.
 
 </details>
 
