--- a/website/docs/de-taal/README.mdx
+++ b/website/docs/de-taal/README.mdx
@@ -14,7 +14,7 @@ Voor vragen over het waarom, bekijk onze [Vragen](/veel-gestelde-vragen) pagina.
 
 ## Documentatie
 
-Het gebruik van documentatie in levenslied programmas wordt sterk afgeraden. Het is een lied. Het is aan het publiek om hier zelf een betekenis aan te koppelen. Als je er echt op staat om documentatie toe te voegen aan je programma, dan moet het tussen haakjes `()` staan.
+Het gebruik van documentatie in levenslied programma's wordt sterk afgeraden. Het is een lied. Het is aan het publiek om hier zelf een betekenis aan te koppelen. Als je er echt op staat om documentatie toe te voegen aan je programma, dan moet het tussen haakjes `()` staan.
 
 <Example>{`
 (zet Harm = 296)
