Add why levenslied is beter dan 'x'

--- a/website/src/pages/veel-gestelde-vragen.mdx
+++ b/website/src/pages/veel-gestelde-vragen.mdx
@@ -6,7 +6,7 @@ import { Example } from "../components/Example";
 
 <summary>Waarom Levenslied?</summary>
 
-**Kabisa** heeft altijd al als missie gehad om **Software bouwend Nederland** beter te maken. Met het uitvoeren van **vakmanschap**, **agile practices**, en **kennisdeling**. Toch vinden we dat we een stapje extra moeten zetten. In plaats van een stapje, kozen we echter voor een gigantische sprong voorwaarts.
+**Kabisa** heeft altijd al als missie gehad om **software bouwend Nederland** beter te maken. Met het uitvoeren van **vakmanschap**, **agile practices**, en **kennisdeling**. Toch vinden we dat we een stapje extra moeten zetten. In plaats van een stapje, kozen we echter voor een gigantische sprong voorwaarts.
 
 Hierbij dan ook ons nieuwe **Mission statement**:
 
@@ -95,6 +95,14 @@ Mijn couplet ontvangt de songtekst en vuur`}</Example>
 <summary>Waarom livegang op 1 april 2024?</summary>
 
 Zoals met veel IT projecten schuiven release data nog weleens. Dat was bij dit project niet anders. We wilden aanvankelijk livegaan in augustus 2024. Maar door alle ontwikkelingen op AI gebied kwamen we erachter dat het publiek voor Levenslied hier nu al veel eerder klaar voor is. Daarom hebben we de releasedatum naar voren geschoven.
+
+</details>
+
+<details>
+
+<summary>Kun je niet beter taal ... gebruiken?</summary>
+
+Er zijn heel veel programmeertalen beschikbaar. En er komen er geregeld nieuwe bij. Waarom gebeurt dat? Eenvoudig. Omdat we met zijn allen vooruit willen. Per programmeer taal komen we een stapje verder met programma's maken. En soms is zo'n taal dan opgebruikt. Zoals COBOl, of Fortran. Helemaal op. Daarom moeten er weer nieuwe talen gemaakt worden. Nieuwe talen zijn daarom dus eigenlijk altijd langer houdbaar en beter. Levenslied is nu de nieuwste, dus de beste, meest houdbare taal.
 
 </details>
 
