--- a/website/src/pages/veel-gestelde-vragen.mdx
+++ b/website/src/pages/veel-gestelde-vragen.mdx
@@ -6,7 +6,7 @@ import { Example } from "../components/Example";
 
 <summary>Waarom Levenslied?</summary>
 
-**Kabisa** heeft altijd al als missie gehad om **software bouwend Nederland** beter te maken. Met het uitvoeren van **vakmanschap**, **agile practices**, en **kennisdeling**. Toch vinden we dat we een stapje extra moeten zetten. In plaats van een stapje, kozen we echter voor een gigantische sprong voorwaarts.
+**Kabisa** heeft altijd al een missie gehad om **software bouwend Nederland** beter te maken. Met het uitvoeren van **vakmanschap**, **agile practices**, en **kennisdeling**. Toch vinden we dat we een stapje extra moeten zetten. In plaats van een stapje, kozen we echter voor een gigantische sprong voorwaarts.
 
 Hierbij dan ook ons nieuwe **Mission statement**:
 
